--------------------------------------------------------------------------------------------------
Release notes version 1.7.5_beta : Enhancements, modifications and corrected bugs since version 1.7.4 :
--------------------------------------------------------------------------------------------------
16/05/17 (TRUST)  Minor change: Option -config completed with gedit editor
25/04/17 (Tools)  Minor change: Options -edit, -xedit and -xcheck added to the trust script (EDITEUR, EditData and VerifData)
25/04/17 (TRUST)  Major change: Adding a stop test for unique implicit time scheme in coupled problem with QC
30/03/17 (Tools)  New feature : New python script to convert into Ensight format (Lata_to_case.py)
27/03/17 (Tools)  Minor change: The default editor for "trust -evol datafile" is the EDITEUR variable (See ~/.perso_TRUST.env file)
17/03/17 (TRUST)  Bug fixed   : Correction of the output of the flux on the boundaries in Front-Tracking
21/02/17 (TRUST)  Minor change: Warning replaced by stop if definition_champs name is x, y, z or t
17/02/17 (TRUST)  New keyword : Add new method for Reduction_0D post field: normalized_norm_L2 [ =norme_L2(field)/norme_L2(1) ]
31/01/17 (TRUST)  Bug fixed   : modele_turbulence WALE with turbulence_paroi negligeable and Cw=0 is now ok
31/01/17 (TRUST)  Bug fixed   : Update of the temps_precedent at a resume_last_time without tinit
--------------------------------------------------------------------------------------------------
Release notes version 1.7.4 : Enhancements, modifications and corrected bugs since version 1.7.3 :
--------------------------------------------------------------------------------------------------
09/12/16 (Tools)  Announcement: New Documentation Generic and Reference Guides
24/11/16 (TRUST)  Portability : Linux distribution CentOS 7, Ubuntu 16 and gcc 6.2.0 supported
23/11/16 (TRUST)  New keyword : Add new option to ExtrudeBord. ExtrudeBord improved